[package]
name = "rulog_vm"
version = "0.1.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
env_logger = "0.10.1"
log = "0.4.20"
colored = "2.1.0"
rulog_test_util = { path = "../rulog_test_util" }
rulog_core ={ path = "../rulog_core" }
